--- a/css/style copy.css
+++ b/css/style copy.css
@@ -1,55 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic);
-@-webkit-keyframes hovering-img {
-  0% {
-    -webkit-transform: translateY(2rem);
-            transform: translateY(2rem);
-  }
-  50% {
-    -webkit-transform: translateY(1.5rem);
-            transform: translateY(1.5rem);
-  }
-  100% {
-    -webkit-transform: translateY(2rem);
-            transform: translateY(2rem);
-  }
-}
-@keyframes hovering-img {
-  0% {
-    -webkit-transform: translateY(2rem);
-            transform: translateY(2rem);
-  }
-  50% {
-    -webkit-transform: translateY(1.5rem);
-            transform: translateY(1.5rem);
-  }
-  100% {
-    -webkit-transform: translateY(2rem);
-            transform: translateY(2rem);
-  }
-}
-
-@-webkit-keyframes hovering-arrow {
-  0% {
-    -webkit-transform: translateY(0rem);
-            transform: translateY(0rem);
-  }
-  100% {
-    -webkit-transform: translateY(0rem);
-            transform: translateY(0rem);
-  }
-}
-
-@keyframes hovering-arrow {
-  0% {
-    -webkit-transform: translateY(0rem);
-            transform: translateY(0rem);
-  }
-  100% {
-    -webkit-transform: translateY(0rem);
-            transform: translateY(0rem);
-  }
-}
-
 .htmlfragment {
   padding: 0 p;
   padding-font-size: inherit;
@@ -438,7 +387,7 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #181818;
+  background-color: #1b1b1b;
   padding: 3em;
   -webkit-clip-path: polygon(100% 0, 100% 90%, 50% 100%, 0 90%, 0 0, 50% 10%);
           clip-path: polygon(100% 0, 100% 90%, 50% 100%, 0 90%, 0 0, 50% 10%);
@@ -812,7 +761,7 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #181818;
+  background-color: #1b1b1b;
   margin-bottom: 0.5em;
   padding: 1em;
 }
@@ -849,7 +798,7 @@ html {
 }
 
 .radc-2021-wrapper .wrap-container .job-cta-wrapper .jobs-intro-text {
-  background-color: #181818;
+  background-color: #1b1b1b;
   position: relative;
   color: #989a9d;
   text-align: left;
