--- a/style.scss
+++ b/style.scss
@@ -862,7 +862,7 @@ a {
     }
     &__responsibilities {
       & h5 {
-        margin-top: 0;
+        margin-top: 4rem;
       }
       & .resp__left {
         padding-right: 3rem;
@@ -896,6 +896,7 @@ a {
     }
     &:hover {
       border-color: black;
+      text-decoration: underline;
     }
   }
 }
